--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-28  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/gifload.c: applied a patch from Adam D. Moss
+	that does some minor message cleanups (bug #128061).
+
 2003-11-27  Dave Neary  <bolsh@gimp.org>
 
 	* autogen.sh: Return error code to controlling environment if one of 
