--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-28  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/plug-ins/Makefile.am
+	* plug-ins/pygimp/plug-ins/py-slice.py: Added py-slice, a python
+	version of perlotine.
+
 2003-11-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/gifload.c: applied a patch from Adam D. Moss
