--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-11-29  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/common/AlienMap.c: 
+	* plug-ins/common/AlienMap2.c: added missing parameter to 
+	dialog_response callback.
+
+	* plug-ins/common/blur.c
+	* plug-ins/common/randomize.c
+	* plug-ins/FractalExplorer/Dialogs.c: fixes #124476 (Remove 
+	non-existent URL's and e-mail addresses).
+
 2003-11-28  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/Makefile.am
