2003-11-29  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/AlienMap.c
	* plug-ins/common/AlienMap2.c: fix it properly. There's really no
	need to pass the same pointer twice.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11648 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-29  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/AlienMap.c
+	* plug-ins/common/AlienMap2.c: fix it properly. There's really no
+	need to pass the same pointer twice.
+
 2003-11-29  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/common/AlienMap.c: 
