--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-11-29  Sven Neumann  <sven@gimp.org>
 
+	* app/config/gimpguiconfig.c: set the default window type hint for
+	dockables to Normal.
+
+	* plug-ins/sel2path/sel2path_adv_dialog.c: set the number of
+	digits to the same value for all spinbuttons.
+
+2003-11-29  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/AlienMap.c
 	* plug-ins/common/AlienMap2.c: fix it properly. There's really no
 	need to pass the same pointer twice.
