--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-30  Sven Neumann  <sven@gimp.org>
+
+	* app/batch.[ch]: renamed batch_init() to batch_run(). Install an
+	Gimp::exit handler while batch commands are executed. This handler
+	simply calls exit(). Fixes bug #128199.
+
+	* app/app_procs.c: changed accordingly. Removed remaining global
+	variables.
+
 2003-11-30  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimp-paint.c (gimp_paint_init): reordered
