Backed out inadvertant changes to configure.in
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11655 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-11-30  Helvetix Victorinox  <helvetix@gimp.org>
 
+	* configure.in: backed out inadvertant changes.
+
 	* app/composite/gimp-composite.c:
 	* app/composite/gimp-composite.h:
 	* app/main.c:
