2003-12-01  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpimage-flip.c (gimp_image_flip): no need to
	reallocate the image's projection (the image size doesn't change
	when flipping).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11658 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-01  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpimage-flip.c (gimp_image_flip): no need to
+	reallocate the image's projection (the image size doesn't change
+	when flipping).
+
 2003-12-01  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpcolormapeditor.c (gimp_colormap_adjustment_changed):
