2003-12-01  Sven Neumann  <sven@gimp.org>
	* app/core/gimpdrawable-blend.c: some code cleanup I've done while
	looking at bug #128146.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11660 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-01  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpdrawable-blend.c: some code cleanup I've done while
+	looking at bug #128146.
+
 2003-12-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage.c: added a default implementation of
