2003-12-02  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/Makefile.am
	* libgimpthumb/gimpthumb-error.[ch]: added new files that define the
	GIMP_THUMB_ERROR domain.

	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumb.h
	* libgimpthumb/gimpthumbnail.[ch]: finalizing the API.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11661 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-02  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/Makefile.am
+	* libgimpthumb/gimpthumb-error.[ch]: added new files that define the
+	GIMP_THUMB_ERROR domain.
+
+	* libgimpthumb/gimpthumb-utils.[ch]
+	* libgimpthumb/gimpthumb.h
+	* libgimpthumb/gimpthumbnail.[ch]: finalizing the API.
+
 2003-12-01  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpdrawable-blend.c: some code cleanup I've done while
