2003-12-02  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/Makefile.am
        * plug-ins/common/plugin-defs.pl
        * plug-ins/common/channel_mixer.c: Added channel mixer plugin.
        Needs some work still, notably the settings load/save handling.
        Addresses bug #113901.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11665 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-02  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/Makefile.am
+	* plug-ins/common/plugin-defs.pl
+	* plug-ins/common/channel_mixer.c: Added channel mixer plugin.
+	Needs some work still, notably the settings load/save handling.
+	Addresses bug #113901.
+
 2003-12-02  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/tiff.c: applied a modified version of a patch
