oops, forgot changelog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11666 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-02  Manish Singh  <yosh@gimp.org>
 
+	* plug-ins/common/CML_explorer.c: fix save dialog handling.
+
+2003-12-02  Manish Singh  <yosh@gimp.org>
+
 	* plug-ins/common/Makefile.am
 	* plug-ins/common/plugin-defs.pl
 	* plug-ins/common/channel_mixer.c: Added channel mixer plugin.
