--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-03  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/CML_explorer.c
+	* plug-ins/common/channel_mixer.c: use g_file_test() instead of stat().
+
 2003-12-02  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/channel_mixer.c: fix call to gimp_dialog_run.
