--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-03  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/channel_mixer.c: changed float (de)serialization
+	to use locale independent g_ascii_* functions (fixes bug #113901).
+	Cleaned up the GUI a lot (scale entries and stuff). Some more
+	general cleanup.
+
 2003-12-03  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/ccanalyze.c: use gimp_memsize_to_string() to
