2003-12-03  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/animoptimize.c: resolved mnemonics conflict,
	removed warnings and cleaned up the code a bit.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11671 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-03  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added plug-ins/common/channel_mixer.c.
+
+	* de.po: updated german translation.
+
 2003-11-27  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation
