--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-03  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/animoptimize.c: resolved mnemonics conflict,
+	removed warnings and cleaned up the code a bit.
+
 2003-12-03  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/channel_mixer.c: changed float (de)serialization
