--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-03  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/nlfilt.c: use G_MAXINT instead of a custom define.
+
+2003-12-03  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/animoptimize.c: resolved mnemonics conflict,
 	removed warnings and cleaned up the code a bit.
 
