2003-12-03  Jakub Steiner <jimmac@ximian.com>
* data/patterns/Stripes1px.pat
* data/patterns/Stripes2px.pat: rename to Stripes & Stripes Fine


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11674 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-03  Jakub Steiner <jimmac@ximian.com>
+
+	* data/patterns/Stripes1px.pat
+	* data/patterns/Stripes2px.pat: rename to Stripes & Stripes Fine
+
 2003-12-03  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/nlfilt.c: use G_MAXINT instead of a custom define.
