--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,42 @@
+2003-12-03  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/channel.pdb
+	* tools/pdbgen/pdb/layer.pdb: removed duplicated APIs for "name",
+	"visible" and "tattoo"...
+
+	* tools/pdbgen/pdb/drawable.pdb: ...and added them as drawable APIs.
+
+	* libgimp/gimpdrawable.[ch]: removed faked layer/channel
+	polymorphisms, the functions are real drawable functions now.
+
+	* libgimp/gimpcompat.h: added the old cruft here.
+
+	* app/pdb/channel_cmds.c
+	* app/pdb/drawable_cmds.c
+	* app/pdb/internal_procs.c
+	* app/pdb/layer_cmds.c
+	* libgimp/gimpchannel_pdb.[ch]
+	* libgimp/gimpdrawable_pdb.[ch]
+	* libgimp/gimplayer_pdb.[ch]: regenerated.
+
+	* libgimp/gimpexport.c
+	* libgimp/gimpmenu.c
+	* plug-ins/common/align_layers.c
+	* plug-ins/common/animationplay.c
+	* plug-ins/common/animoptimize.c
+	* plug-ins/common/curve_bend.c
+	* plug-ins/common/gbr.c
+	* plug-ins/common/gif.c
+	* plug-ins/common/gih.c
+	* plug-ins/common/iwarp.c
+	* plug-ins/common/mng.c
+	* plug-ins/common/psd.c
+	* plug-ins/common/psd_save.c
+	* plug-ins/common/psp.c
+	* plug-ins/xjt/xjt.c
+	* plug-ins/gfig/gfig.c
+	* plug-ins/script-fu/scripts/*.scm: changed accordingly.
+
 2003-12-03  Jakub Steiner <jimmac@ximian.com>
 
 	* data/patterns/Stripes1px.pat
