--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-03  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt: updated.
+
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/libgimpbase-sections.txt
