forgot to mention some files.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11676 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,6 +1,9 @@
 2003-12-03  Michael Natterer  <mitch@gimp.org>
 
-	* libgimp/libgimp-sections.txt: updated.
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpchannel.sgml
+	* libgimp/tmpl/gimpdrawable.sgml
+	* libgimp/tmpl/gimplayer.sgml: updated.
 
 2003-11-25  Sven Neumann  <sven@gimp.org>
 
