2003-12-03  Michael Natterer  <mitch@gimp.org>
	* plug-ins/pygimp/gimpmodule.c (pygimp_delete): follow change below.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11679 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-03  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/pygimp/gimpmodule.c (pygimp_delete): follow change below.
+
+2003-12-03  Michael Natterer  <mitch@gimp.org>
+
 	* tools/pdbgen/pdb/channel.pdb
 	* tools/pdbgen/pdb/layer.pdb: removed gimp_layer_delete() and
 	gimp_channel_delete() PDB wrappers...
