--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-03  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimp.def: updated.
+
 2003-12-03  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/pygimp/gimpmodule.c (pygimp_delete): follow change below.
