2003-12-03  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/gimpmodule.c
        * plug-ins/pygimp/pygimp-drawable.c
        * plug-ins/pygimp/pygimp-image.c
        * plug-ins/pygimp/pygimp-pdb.c
        * plug-ins/pygimp/pygimp-tile.c: some cosmetic changes to error
        messages.

        * plug-ins/pygimp/pygimp-drawable.c: accessors for name, tattoo, and
        visible live in the drawable class now, so layer and channel objects
        inherit it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11682 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-12-03  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/gimpmodule.c
+	* plug-ins/pygimp/pygimp-drawable.c
+	* plug-ins/pygimp/pygimp-image.c
+	* plug-ins/pygimp/pygimp-pdb.c
+	* plug-ins/pygimp/pygimp-tile.c: some cosmetic changes to error
+	messages.
+
+	* plug-ins/pygimp/pygimp-drawable.c: accessors for name, tattoo, and
+	visible live in the drawable class now, so layer and channel objects
+	inherit it.
+
 2003-12-03  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimp.def: updated.
