--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-04  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2003-12-03  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added plug-ins/common/channel_mixer.c.
