--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-04  Jan Morén  <jan.moren@lucs.lu.se>
+
+        * sv.po: Updated Swedish translation.
+
 2003-11-26  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
