2003-12-04  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/layer.pdb: removed "linked" API...
	* tools/pdbgen/pdb/drawable.pdb: ...and added it here.

	* app/pdb/drawable_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/layer_cmds.c
	* libgimp/gimpdrawable_pdb.[ch]
	* libgimp/gimplayer_pdb.[ch]: regenerated.

	* libgimp/gimpcompat.h: added gimp_layer_*_linked compat #defines.

	* plug-ins/xjt/xjt.c: changed accordingly.

2003-12-04  Michael Natterer  <mitch@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpdrawable.sgml
	* libgimp/tmpl/gimplayer.sgml: "linked" moved from layer to drawable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11686 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-12-04  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/layer.pdb: removed "linked" API...
+	* tools/pdbgen/pdb/drawable.pdb: ...and added it here.
+
+	* app/pdb/drawable_cmds.c
+	* app/pdb/internal_procs.c
+	* app/pdb/layer_cmds.c
+	* libgimp/gimpdrawable_pdb.[ch]
+	* libgimp/gimplayer_pdb.[ch]: regenerated.
+
+	* libgimp/gimpcompat.h: added gimp_layer_*_linked compat #defines.
+
+	* plug-ins/xjt/xjt.c: changed accordingly.
+
 2003-12-03  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/gimpmodule.c
