--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-04  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpdrawable.sgml
+	* libgimp/tmpl/gimplayer.sgml: "linked" moved from layer to drawable.
+
 2003-12-03  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
