2003-12-04  Michael Natterer  <mitch@gimp.org>
	* plug-ins/pygimp/pygimp-drawable.c (lay_set_linked): made it
	compile again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11688 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-04  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/pygimp/pygimp-drawable.c (lay_set_linked): made it
+	compile again.
+
+2003-12-04  Michael Natterer  <mitch@gimp.org>
+
 	* tools/pdbgen/pdb/layer.pdb: removed "linked" API...
 	* tools/pdbgen/pdb/drawable.pdb: ...and added it here.
 
