2003-12-04  Michael Natterer  <mitch@gimp.org>
	* plug-ins/helpbrowser/dialog.c
	* plug-ins/helpbrowser/domain.[ch]
	* plug-ins/helpbrowser/uri.[ch]: cleanup & whitespace removal.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11690 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-04  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/helpbrowser/dialog.c
+	* plug-ins/helpbrowser/domain.[ch]
+	* plug-ins/helpbrowser/uri.[ch]: cleanup & whitespace removal.
+
+2003-12-04  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpimage.h: removed unused "gint proj_level" from the
 	GimpImage struct.
 
