--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,45 @@
 2003-12-04  Michael Natterer  <mitch@gimp.org>
 
+	* tools/pdbgen/pdb/drawable.pdb: renamed gimp_drawable_image() to
+	gimp_drawable_get_image() for symmetry with
+	gimp_drawable_set_image().
+
+	* libgimp/gimpchannel.h: removed gimp_channel_get_image_id #define.
+	* libgimp/gimpdrawable.h: removed gimp_drawable_image_id #define.
+	* libgimp/gimplayer.h:: removed gimp_layer_get_image_id #define.
+
+	* libgimp/gimpcompat.h: added the old stuff here.
+
+	* app/pdb/drawable_cmds.c
+	* libgimp/gimpdrawable_pdb.[ch]: regenerated.
+
+	* libgimp/gimpmiscui.c
+	* plug-ins/Lighting/lighting_main.c
+	* plug-ins/MapObject/mapobject_main.c
+	* plug-ins/common/curve_bend.c
+	* plug-ins/common/film.c
+	* plug-ins/common/newsprint.c
+	* plug-ins/common/pixelize.c
+	* plug-ins/common/ps.c
+	* plug-ins/common/sample_colorize.c
+	* plug-ins/common/smooth_palette.c
+	* plug-ins/common/warp.c
+	* plug-ins/imagemap/imap_cmd_gimp_guides.c
+	* plug-ins/imagemap/imap_main.c
+	* plug-ins/imagemap/imap_preview.c
+	* plug-ins/maze/maze.c
+	* plug-ins/pygimp/pygimp-drawable.c
+	* plug-ins/rcm/rcm_misc.c
+	* plug-ins/script-fu/scripts/addborder.scm
+	* plug-ins/script-fu/scripts/carve-it.scm
+	* plug-ins/script-fu/scripts/weave.scm: changed accordingly.
+
+	* plug-ins/maze/maze.c: completely reindented.
+
+	* plug-ins/script-fu/siod/trace.c: removed trailing whitespace.
+
+2003-12-04  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpimage-projection.c (gimp_image_projection_allocate):
 	optimized to reallocate the projection TileManager only if it does
 	not match the required width, height and depth.
