--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimp.def: updated.
+
 2003-12-04  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/drawable.pdb: renamed gimp_drawable_image() to
