--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,6 +1,12 @@
 2003-12-04  Michael Natterer  <mitch@gimp>
 
 	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpconvert.sgml
+	* libgimp/tmpl/gimpimage.sgml: follow gimp_image_convert_*() change.
+
+2003-12-04  Michael Natterer  <mitch@gimp>
+
+	* libgimp/libgimp-sections.txt
 	* libgimp/tmpl/gimplayer.sgml: follow gimp_layer_get_mask() change.
 
 2003-12-04  Michael Natterer  <mitch@gimp.org>
