2003-12-04  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/pygimp-drawable.c: made linked an attribute of
        GimpDrawable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11697 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-04  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/pygimp-drawable.c: made linked an attribute of
+	GimpDrawable.
+
 2003-12-04  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/convert.pdb: renamed gimp_convert_*() functions
