--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-05  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/resize-dialog.c: added mnemonics.
+
 2003-12-04  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/pygimp-drawable.c: made linked an attribute of
